@@ -1,9 +1,7 @@
 package com.agriculture.service;
 
 import com.agriculture.modules.agriBrain.tool.impl.DetectionTool;
-import com.agriculture.modules.inference.entity.Inference;
-import com.agriculture.modules.inference.mapper.InferenceMapper;
-import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
+import com.agriculture.modules.inference.service.InferenceService;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
@@ -12,34 +10,29 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.math.BigDecimal;
-import java.time.LocalDateTime;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 class DetectionToolTest {
 
     @Mock
-    private InferenceMapper inferenceMapper;
+    private InferenceService inferenceService;
 
     @InjectMocks
     private DetectionTool detectionTool;
 
-    private Inference createInference(String diseaseIds, String pestIds, LocalDateTime createdAt) {
-        Inference inf = new Inference();
-        inf.setId("inf-" + System.nanoTime());
-        inf.setDiseaseIds(diseaseIds);
-        inf.setPestIds(pestIds);
-        inf.setDetections("[{\"class_name\":\"白粉病\",\"confidence\":0.85}]");
-        inf.setTotalElapsedMs(new BigDecimal("120"));
-        inf.setCreatedAt(createdAt);
-        return inf;
+    private Map<String, Object> createDetectionMap(String diseaseName, double confidence) {
+        Map<String, Object> map = new LinkedHashMap<>();
+        map.put("class_name", diseaseName);
+        map.put("confidence", confidence);
+        return map;
     }
 
     @Nested
@@ -49,8 +42,9 @@ class DetectionToolTest {
         @Test
         @DisplayName("查询最近检测记录")
         void query_default_returnsRecentDetections() {
-            Inference inf = createInference("[0,3]", "[22]", LocalDateTime.now());
-            when(inferenceMapper.selectList(any(LambdaQueryWrapper.class))).thenReturn(List.of(inf));
+            Map<String, Object> detection = createDetectionMap("白粉病", 0.85);
+            when(inferenceService.listDetections(eq("company-001"), isNull(), isNull(), isNull(), eq(20)))
+                    .thenReturn(List.of(detection));
 
             String result = detectionTool.execute(Map.of("action", "query"), "user-001", "company-001");
 
@@ -61,8 +55,9 @@ class DetectionToolTest {
         @Test
         @DisplayName("筛选病害记录")
         void query_diseaseType_returnsDiseaseOnly() {
-            Inference inf = createInference("[0]", null, LocalDateTime.now());
-            when(inferenceMapper.selectList(any(LambdaQueryWrapper.class))).thenReturn(List.of(inf));
+            Map<String, Object> detection = createDetectionMap("白粉病", 0.85);
+            when(inferenceService.listDetections(eq("company-001"), eq("disease"), isNull(), isNull(), eq(20)))
+                    .thenReturn(List.of(detection));
 
             String result = detectionTool.execute(Map.of("action", "query", "type", "disease"), "user-001", "company-001");
 
@@ -72,7 +67,8 @@ class DetectionToolTest {
         @Test
         @DisplayName("无记录时返回空列表")
         void query_noData_returnsEmptyList() {
-            when(inferenceMapper.selectList(any(LambdaQueryWrapper.class))).thenReturn(Collections.emptyList());
+            when(inferenceService.listDetections(eq("company-001"), isNull(), isNull(), isNull(), eq(20)))
+                    .thenReturn(Collections.emptyList());
 
             String result = detectionTool.execute(Map.of("action", "query"), "user-001", "company-001");
 
@@ -87,9 +83,10 @@ class DetectionToolTest {
         @Test
         @DisplayName("查询最近7天趋势")
         void trend_default_returnsDailyAggregation() {
-            Inference inf1 = createInference("[0]", "[22]", LocalDateTime.now().minusDays(1));
-            Inference inf2 = createInference("[3]", null, LocalDateTime.now());
-            when(inferenceMapper.selectList(any(LambdaQueryWrapper.class))).thenReturn(List.of(inf1, inf2));
+            Map<String, Object> trendData = new LinkedHashMap<>();
+            trendData.put("totalDetections", 2);
+            trendData.put("daily", List.of());
+            when(inferenceService.getDetectionTrend("company-001", 7)).thenReturn(trendData);
 
             String result = detectionTool.execute(Map.of("action", "trend"), "user-001", "company-001");
 
@@ -100,7 +97,10 @@ class DetectionToolTest {
         @Test
         @DisplayName("无数据时返回空趋势")
         void trend_noData_returnsEmptyTrend() {
-            when(inferenceMapper.selectList(any(LambdaQueryWrapper.class))).thenReturn(Collections.emptyList());
+            Map<String, Object> emptyTrend = new LinkedHashMap<>();
+            emptyTrend.put("totalDetections", 0);
+            emptyTrend.put("daily", List.of());
+            when(inferenceService.getDetectionTrend("company-001", 7)).thenReturn(emptyTrend);
 
             String result = detectionTool.execute(Map.of("action", "trend"), "user-001", "company-001");
 
